--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <div class="row">
                       <div class="col-lg-6">
                           <ul>
-                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> Will update soon
+                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> ebinalex017.github.io/Ebinalx
                               </li>
                               <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Calicut, Kerala
                               </li>
