--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ebin Alex</h1>
-      <p>I'm <span class="typed" data-typed-items="Student,Web developer,programmer,Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Student,Web developer,programmer,E"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/ebin.alex.940" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://twitter.com/EbinAlexx" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -85,7 +85,7 @@
                   <div class="row">
                       <div class="col-lg-6">
                           <ul>
-                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> ebinalex017.github.io/Ebinalx
+                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.ebinalex.co.vu
                               </li>
                               <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Calicut, Kerala
                               </li>
