--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ebin Alex</h1>
-      <p>I'm <span class="typed" data-typed-items="Student,Web developer,programmer,E"></span></p>
+      <p>I'm <span class="typed" data-typed-items="student,web developer,programmer,active learner"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/ebin.alex.940" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://twitter.com/EbinAlexx" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -109,7 +109,7 @@
 
         <div class="section-title">
           <h2>Skills 🚀 </h2>
-          <p>Learning is a non-stop process for a developer. As I am a beginner 🔰,  I'm continuously learning new technologies.  Updates will be shared. </p>
+          <p>Learning is a non-stop process for a developer. As I am a beginner 🔰,  I'm like to learn new technologies periodically. Updates will be shared. </p>
         </div>
 
         <div class="row skills-content">
