--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <div class="row">
                       <div class="col-lg-6">
                           <ul>
-                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.ebinalex.co.vu
+                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.ebinalex.ml
                               </li>
                               <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Calicut, Kerala
                               </li>
