--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ebin Alex</h1>
-      <p>I'm <span class="typed" data-typed-items="student,web developer,programmer,active learner"></span></p>
+      <p>I'm <span class="typed" data-typed-items="student,web developer,programmer"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/ebin.alex.940" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://twitter.com/EbinAlexx" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -62,7 +62,6 @@
         <a href="https://www.github.com/ebinalex017" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.t.me/ebin_al" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
         <a href="https://dev.to/ebinalex017" target="_blank" class="dev"><i class="bx bxl-dev-to"></i></a>
-        <!--<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="vivekkj" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>-->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -85,7 +84,7 @@
                   <div class="row">
                       <div class="col-lg-6">
                           <ul>
-                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.ebinalex.ml
+                              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>ebinalex.ml
                               </li>
                               <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Calicut, Kerala
                               </li>
@@ -188,7 +187,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Resume📝</h2>
           <p>An independent and self-taught developer, currently studying first-year computer science engineering.</p>
         </div>
 
@@ -209,7 +208,7 @@
               <h4>Higher Secondary &amp; Computer Science</h4>
               <h5>2019 - 2021</h5>
               <p><em>St.Joseph's Higher Secondary School, Calicut</em></p>
-              <p>Completed higher secondary with 92 %.</p>
+              <p></p>
             </div>
             <div class="resume-item">
               <h4>B.Tech &amp;Computer Science Engineering Specialization in AI </h4>
@@ -231,7 +230,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contact📧</h2>
         </div>
 
         <div class="row mt-1">
@@ -241,7 +240,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Thiruvambady, Calicut, Kerala</p>
+                <p>Calicut, Kerala</p>
               </div>
 
               <div class="email">
@@ -253,33 +252,40 @@
             </div>
 
           </div>
+          
 
-         <!-- <div class="col-lg-8 mt-5 mt-lg-0">
+         <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
+
+          <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xlezjykp" method="POST" role="form" class="php-email-form">
+            <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                    <div class="validate"></div>
                 </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                <div class="col-md-6 form-group">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+                    <div class="validate"></div>
                 </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
+                <div class="validate"></div>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <div class="validate"></div>
+            </div>
+            <div class="mb-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>7
+            </div>
+            <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
 
-          </div> -->
+    
+
+          </div>
 
         </div>
 
@@ -305,11 +311,6 @@
         &copy; Copyright <strong><span>Ebin Alex</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
